Fix problem with overflowing component

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -15,4 +15,5 @@ body {
   font-family: $font-main;
   font-size: 18px;
   background-color: $bg-color;
+  overflow-x: hidden;
 }
